--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,4 +4,7 @@
 <p>
     <%= @article.body %>
 </p>
+<%= link_to "Edit Article", edit_article_path(@article) %>
+<%= link_to "Delete Article", article_path(@article),
+    method: :delete, data: { confirm: "Really delete the article?" } %>
 <%= link_to "<< Back to Articles list", articles_path %>
