--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,12 @@
 <p>
     <%= @article.body %>
 </p>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+
+<%= render partial: 'comments/form' %>
+
 <%= link_to "Edit Article", edit_article_path(@article) %>
 <%= link_to "Delete Article", article_path(@article),
     method: :delete, data: { confirm: "Really delete the article?" } %>
