--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,9 +4,11 @@
 <p>
     <%= @article.body %>
 </p>
-<p>
-    <%= image_tag @article.image.url %>
-</p>
+<% if @article.image.exists? %>
+    <p>
+            <%= image_tag @article.image.url %>
+    </p>
+<% end %>
 
 <p>
     Tags:
@@ -20,7 +22,9 @@
 
 <%= render partial: 'comments/form' %>
 
-<%= link_to "Edit Article", edit_article_path(@article) %>
-<%= link_to "Delete Article", article_path(@article),
-    method: :delete, data: { confirm: "Really delete the article?" } %>
+<% if logged_in? %>
+    <%= link_to "Edit Article", edit_article_path(@article) %>
+    <%= link_to "Delete Article", article_path(@article),
+        method: :delete, data: { confirm: "Really delete the article?" } %>
+<% end %>
 <%= link_to "<< Back to Articles list", articles_path %>
