--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,19 @@
 
   <body>
     <p class="flash"><%= flash.notice %></p>
-    <%= yield %>
+    <div id="container">
+      <div id="content">
+        <%= yield %>
+        <hr>
+        <h6>
+          <% if logged_in? %>
+            <%= "Logged in as #{current_user.email}" %>
+            <%= link_to 'Log out', logout_path %>
+          <% else %>
+            <%= link_to 'Log in', login_path %>
+          <% end %>
+        </h6>
+      </div>
+    </div>
   </body>
 </html>
